tests/errmsgs/t8064.nim
import tables

values


discard """
  # either this or "expression has no type":
  errormsg: "ambiguous identifier: 'values' -- use one of the following:"
"""
